# PipRay

./: .gitignore  CMakeLists.txt  README.md  batch_process.sh  build.sh  cmake_commands.txt  extract_parks_europe_small.py  generate_random_points.py  output_test.wkt  plot_triangulation.py  requirements.txt  run_queries.sh  single_polygon_triangulation.txt  test.json  test_dataset.wkt  triangulation_requirements.txt  validate_ray_results.py  visualize_performance_results.py  visualize_single_polygon.py
CDT/CDT/: CMakeCache.txt  cmake_install.cmake  install_manifest.txt
CDT/examples/triangulation_example/: CMakeLists.txt  main.cpp
src/: common.h  dataset_loader.cpp  dataset_loader.h  main.cpp  preprocess_dataset.cpp  raytracing.cu  timer.cpp  timer.h  triangulate_dataset.cpp  triangulate_single_polygon.cpp  triangulation.cpp  triangulation.h
